# awesome_cpp

./: .clang-format  .clang-format.tmp  .gitignore  CMakeLists.txt  README.md  repro.sh  repro_format.cpp
1_basics/: CMakeLists.txt
1_basics/include/: 1_basics.hpp  chapter0.hpp  chapter1.hpp  chapter2.hpp  chapter3.hpp  chapter4.hpp
1_basics/src/: main.cpp
1_basics/src/chapter0/: age.cpp  calc.cpp  convert.cpp  hello_world.cpp  run.cpp
1_basics/src/chapter1/: const.cpp  print_number.cpp  run.cpp  sizeof_in_c.c  values.cpp
1_basics/src/chapter2/: conditional.cpp  loops.cpp  range_for.cpp  run.cpp
1_basics/src/chapter3/: functions.cpp  inline_constexpr.cpp  overload.cpp  passing.cpp  run.cpp
1_basics/src/chapter4/: pointers.cpp  run.cpp
doxygen_tools/: Doxyfile.in  DoxygenLayout.xml  filter.sh  footer.html
