add_executable(1_basics
        src/main.cpp
        include/1_basics.hpp
        include/chapter0.hpp
        include/chapter1.hpp
        src/chapter0/hello_world.cpp
        src/chapter0/calc.cpp
        src/chapter0/age.cpp
        src/chapter0/convert.cpp
        src/chapter0/run.cpp
        src/chapter1/print_number.cpp
        src/chapter1/run.cpp
        src/chapter1/sizeof_in_c.c
        src/chapter1/const.cpp
        src/chapter1/values.cpp
        include/chapter2.hpp
        src/chapter2/conditional.cpp
        src/chapter2/run.cpp
        src/chapter2/loops.cpp
        src/chapter2/range_for.cpp
        include/chapter3.hpp
        src/chapter3/functions.cpp
        src/chapter3/run.cpp
        src/chapter3/passing.cpp
)

target_include_directories(1_basics
        PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/include
)

target_link_libraries(1_basics
        c++
        c++abi
)

target_compile_options(1_basics
        PRIVATE
        -Wall
        -Wextra
        -Wpedantic
)